--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "sagemaker-jupyterlab-extension" %}
-{% set version = "0.4.0" %}
+{% set version = "0.4.2" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
-  sha256: 11dc4a72f5334b960ad1cb3bd9fe1d261a8969513a112d45efe60e17086bc58f
+  sha256: 43028fd5ef7a0ccc392ff6688ee591fe67432e13d1276a3293a9832558176bdf
 
 build:
   noarch: python
@@ -28,6 +28,7 @@ requirements:
     - jupyterlab >=4
     - jupyter_events >=0.6.0
     - sagemaker-jupyterlab-extension-common
+    - jupyterlab-git >=0.51.1,<1.0.0
     - async-lru
     - aws-embedded-metrics
 
